# UniDB

./: CMakeLists.txt  main.cpp
src/engine/: Command.h  ExecutionEngine.cpp  ExecutionEngine.h  TransactionStack.h
src/models/: Document.h
src/parser/: QueryParser.cpp  QueryParser.h
src/storage/: ArrayCollection.cpp  ArrayCollection.h  Collection.h  LinkedListCollection.h
